POFIM-73: Regner ut snitt backend, markerer hvilke måneder som er brukt (#214)
* POFIM-73: Regner ut snitt backend, markerer hvilke måneder som er brukt