@@ -9,6 +9,8 @@ import java.time.YearMonth;
 import java.util.Collections;
 import java.util.List;
 
+import no.nav.familie.inntektsmelding.typer.dto.MånedslønnStatus;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -56,201 +58,205 @@ class InntektTjenesteTest {
         response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
         when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+        var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), BigDecimal.valueOf(25_000), ORGNR)
-            , new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR)
-            , new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), BigDecimal.valueOf(25_000), ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
+        var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+            , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+            , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT));
+        assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(25_000));
     }
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_inntekt_ikke_finnes_for_siste_måned() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,10,15);
-        var dagensDato = LocalDate.of(2024,10,1);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
+        @Test
+        void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_inntekt_ikke_finnes_for_siste_måned() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,10,15);
+            var dagensDato = LocalDate.of(2024,10,1);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
-        var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
+            var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 6), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), null, ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 6), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
+                new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 9), MånedslønnStatus.IKKE_RAPPORTERT_RAPPORTERINGSFRIST_IKKE_PASSERT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(25_000));
+        }
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_inntekt_finnes_for_siste_måned() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,10,15);
-        var dagensDato = LocalDate.of(2024,10,1);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
+        @Test
+        void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_inntekt_finnes_for_siste_måned() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,10,15);
+            var dagensDato = LocalDate.of(2024,10,1);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
-        var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        var inntekt4 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
+            var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
+            var inntekt4 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), BigDecimal.valueOf(25_000), ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_når_det_mangler_inntekt_midt_i_perioden_uten_justering() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,10,15);
-        var dagensDato = LocalDate.of(2024,10,15);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(25_000));
+     }
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,8), null);
-        var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        @Test
+        void skal_teste_at_inntekter_innhentes_når_det_mangler_inntekt_midt_i_perioden_uten_justering() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,10,15);
+            var dagensDato = LocalDate.of(2024,10,15);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(25_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,8), null);
+            var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(25_000));
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), null, ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), BigDecimal.valueOf(25_000), ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_når_det_mangler_inntekt_midt_i_perioden_med_justering() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,10,15);
-        var dagensDato = LocalDate.of(2024,10,2);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 8), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(16_666.67));
+        }
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,7), null);
-        var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        var inntekt4 = getInntekt(YearMonth.of(2024,9), null);
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        @Test
+        void skal_teste_at_inntekter_innhentes_når_det_mangler_inntekt_midt_i_perioden_med_justering() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,10,15);
+            var dagensDato = LocalDate.of(2024,10,2);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 6), YearMonth.of(2024, 9));
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,6), BigDecimal.valueOf(25_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,7), null);
+            var inntekt3 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
+            var inntekt4 = getInntekt(YearMonth.of(2024,9), null);
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 6), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), null, ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), null, ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-    @Test
-    void skal_teste_når_ingen_inntekter_er_rapportert() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,10,15);
-        var dagensDato = LocalDate.of(2024,10,15);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 6), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
+                new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 7), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 9), MånedslønnStatus.IKKE_RAPPORTERT_RAPPORTERINGSFRIST_IKKE_PASSERT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(16_666.67));
+        }
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        aiResponse.setArbeidsInntektMaaned(List.of());
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        @Test
+        void skal_teste_når_ingen_inntekter_er_rapportert() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,10,15);
+            var dagensDato = LocalDate.of(2024,10,15);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 9));
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            aiResponse.setArbeidsInntektMaaned(List.of());
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), null, ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), null, ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), null, ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_4_uker_før_stp() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,12,1);
-        var dagensDato = LocalDate.of(2024,11,4);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 7), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 8), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 9), MånedslønnStatus.IKKE_RAPPORTERT_MEN_BRUKT_I_GJENNOMSNITT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.ZERO);
+        }
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        @Test
+        void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_4_uker_før_stp() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,12,1);
+            var dagensDato = LocalDate.of(2024,11,4);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
+            var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 7), BigDecimal.valueOf(20_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), BigDecimal.valueOf(30_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 10), null, ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 11), null, ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
 
-    @Test
-    void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_4_uker_før_stp_men_midterste_måned_finnes() {
-        var aktørId = new AktørIdEntitet(AKTØR_ID);
-        var stp = LocalDate.of(2024,12,1);
-        var dagensDato = LocalDate.of(2024,11,4);
-        var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(20_000), YearMonth.of(2024, 7), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
+            new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
+                new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 10), MånedslønnStatus.IKKE_RAPPORTERT_RAPPORTERINGSFRIST_IKKE_PASSERT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 11), MånedslønnStatus.IKKE_RAPPORTERT_RAPPORTERINGSFRIST_IKKE_PASSERT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(25_000));
+        }
 
-        var response = new HentInntektListeBolkResponse();
-        var aiResponse = new ArbeidsInntektIdent();
-        aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
-        var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
-        var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
-        var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
-        var inntekt4 = getInntekt(YearMonth.of(2024,10), BigDecimal.valueOf(30_000));
-        aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
-        response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
-        when(klient.finnInntekt(forventetRequest)).thenReturn(response);
+        @Test
+        void skal_teste_at_inntekter_innhentes_dagens_dato_er_før_rapporteringsfrist_og_4_uker_før_stp_men_midterste_måned_finnes() {
+            var aktørId = new AktørIdEntitet(AKTØR_ID);
+            var stp = LocalDate.of(2024,12,1);
+            var dagensDato = LocalDate.of(2024,11,4);
+            var forventetRequest = new FinnInntektRequest(aktørId.getAktørId(), YearMonth.of(2024, 7), YearMonth.of(2024, 11));
 
-        var inntekter = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+            var response = new HentInntektListeBolkResponse();
+            var aiResponse = new ArbeidsInntektIdent();
+            aiResponse.setIdent(new Aktoer(aktørId.getAktørId(), AktoerType.AKTOER_ID));
+            var inntekt1 = getInntekt(YearMonth.of(2024,7), BigDecimal.valueOf(20_000));
+            var inntekt2 = getInntekt(YearMonth.of(2024,8), BigDecimal.valueOf(25_000));
+            var inntekt3 = getInntekt(YearMonth.of(2024,9), BigDecimal.valueOf(30_000));
+            var inntekt4 = getInntekt(YearMonth.of(2024,10), BigDecimal.valueOf(30_000));
+            aiResponse.setArbeidsInntektMaaned(List.of(inntekt1, inntekt2, inntekt3, inntekt4));
+            response.setArbeidsInntektIdentListe(Collections.singletonList(aiResponse));
+            when(klient.finnInntekt(forventetRequest)).thenReturn(response);
 
-        var forventetListe = List.of(new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 8), BigDecimal.valueOf(25_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 9), BigDecimal.valueOf(30_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 10), BigDecimal.valueOf(30_000), ORGNR),
-            new InntektTjeneste.Månedsinntekt(YearMonth.of(2024, 11), null, ORGNR));
-        assertThat(inntekter).hasSize(forventetListe.size());
-        assertThat(inntekter).containsAll(forventetListe);
-    }
+            var inntektsopplysinger = tjeneste.hentInntekt(aktørId, stp, dagensDato, ORGNR);
+
+            var forventetListe = List.of(new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(25_000), YearMonth.of(2024, 8), MånedslønnStatus.BRUKT_I_GJENNOMSNITT),
+                new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 9), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(BigDecimal.valueOf(30_000), YearMonth.of(2024, 10), MånedslønnStatus.BRUKT_I_GJENNOMSNITT)
+                , new Inntektsopplysninger.InntektMåned(null, YearMonth.of(2024, 11), MånedslønnStatus.IKKE_RAPPORTERT_RAPPORTERINGSFRIST_IKKE_PASSERT));
+            assertResultat(inntektsopplysinger, forventetListe, ORGNR, BigDecimal.valueOf(28_333.33));
+        }
+
+private void assertResultat(Inntektsopplysninger inntektsopplysinger,
+                            List<Inntektsopplysninger.InntektMåned> forventetListe,
+                            String orgnr,
+                            BigDecimal forventetSnittlønn) {
+    assertThat(inntektsopplysinger).isNotNull();
+    assertThat(inntektsopplysinger.orgnummer()).isEqualTo(orgnr);
+    assertThat(inntektsopplysinger.gjennomsnitt()).isEqualByComparingTo(forventetSnittlønn);
+    assertThat(inntektsopplysinger.måneder()).hasSameSizeAs(forventetListe);
+    assertThat(inntektsopplysinger.måneder()).containsAll(forventetListe);
+}
 
     private static ArbeidsInntektMaaned getInntekt(YearMonth årMåned, BigDecimal beløp) {
         var inntektMånedResponse = new ArbeidsInntektMaaned();
